--- a/package.json
+++ b/package.json
@@ -18,10 +18,18 @@
     "@docusaurus/core": "3.9.2",
     "@docusaurus/preset-classic": "3.9.2",
     "@mdx-js/react": "^3.0.0",
+    "@types/react-slick": "^0.23.13",
     "clsx": "^2.0.0",
+    "d3-scale": "^4.0.2",
     "prism-react-renderer": "^2.3.0",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-globe.gl": "^2.37.0",
+    "react-simple-maps": "^3.0.0",
+    "react-slick": "^0.31.0",
+    "react-tooltip": "^5.30.0",
+    "slick-carousel": "^1.8.1",
+    "three": "^0.182.0"
   },
   "devDependencies": {
     "@docusaurus/module-type-aliases": "3.9.2",
