fix: Resolve React 19 dependency conflict with react-simple-maps

--- a/package.json
+++ b/package.json
@@ -51,5 +51,11 @@
   },
   "engines": {
     "node": ">=20.0"
+  },
+  "overrides": {
+    "react-simple-maps": {
+      "react": "$react",
+      "react-dom": "$react-dom"
+    }
   }
 }
