--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "framer-motion": "^12.23.26",
     "lucide-react": "^0.561.0",
     "next": "16.0.10",
-    "next-auth": "^4.24.13",
+    "next-auth": "^5.0.0-beta.30",
     "next-mdx-remote": "^5.0.0",
     "react": "19.2.1",
     "react-dom": "19.2.1",
