--- a/package.json
+++ b/package.json
@@ -10,14 +10,20 @@
     "pages:build": "npx @cloudflare/next-on-pages"
   },
   "dependencies": {
+    "@octokit/rest": "^22.0.1",
     "clsx": "^2.1.1",
+    "contentlayer2": "^0.5.8",
+    "date-fns": "^4.1.0",
     "framer-motion": "^12.23.26",
     "lucide-react": "^0.561.0",
     "next": "16.0.10",
     "next-auth": "^5.0.0-beta.30",
+    "next-contentlayer2": "^0.5.8",
     "next-mdx-remote": "^5.0.0",
     "react": "19.2.1",
     "react-dom": "19.2.1",
+    "rehype-katex": "^7.0.1",
+    "rehype-prism-plus": "^2.0.1",
     "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
